# deep-packet-inspection

./: .gitignore  CMakeLists.txt  INTERVIEW_GUIDE.md  README.md  output.pcap  output_blocked.pcap
backend/: .env.example  README.md  generate_traffic.js  package-lock.json  package.json  server.js
backend/scripts/: clean_fake_alerts.js  ship_logs.js  simulate_traffic.js
backend/src/: app.js
backend/src/config/: database.js
backend/src/middleware/: errorHandler.js
backend/src/models/: schema.js
backend/src/routes/: analytics.js  dpi.js  rules.js
backend/src/services/: logger.js  socketManager.js
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.js
frontend/src/components/: AlertsTable.jsx  ApplicationChart.jsx  DomainTable.jsx  Icon.jsx  PageHeader.jsx  Panel.jsx  Sidebar.jsx  Sparkline.jsx  StatCard.jsx  TrafficChart.jsx  WorldMap.jsx
frontend/src/pages/: Alerts.jsx  Blocked.jsx  Dashboard.jsx  Geo.jsx  Rules.jsx  Traffic.jsx
frontend/src/services/: api.js  socket.js
include/: live_capture.h  log_shipper.h  rule_sync.h  threat_detector.h
scripts/: test_local.sh
src/: dpi_mt.cpp  live_capture.cpp  log_shipper.cpp  rule_sync.cpp  threat_detector.cpp
tests/: test_rule_sync.cpp  test_threat_detector.cpp
